--- a/MyWebApp/MyWebApp.csproj
+++ b/MyWebApp/MyWebApp.csproj
@@ -174,7 +174,7 @@
     <Content Include="source\favicon.ico" />
     <Content Include="source\icon.png" />
     <Content Include="source\logo.png" />
-    <Content Include="sw.js" />
+    <Content Include="lib\sw.js" />
     <Content Include="Web.config" />
     <Content Include="MysqlData.aspx" />
   </ItemGroup>
